@@ -88,6 +88,9 @@
         <property name="wordWrap" >
          <bool>true</bool>
         </property>
+        <property name="openExternalLinks" >
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="3" column="1" >
@@ -106,6 +109,9 @@
       <string>Why not join the &lt;a href="http://www.last.fm:80/group/Amarok+Users">Amarok Last.fm group&lt;/a> and share your musical tastes with other Amarok users?</string>
      </property>
      <property name="wordWrap" >
+      <bool>true</bool>
+     </property>
+     <property name="openExternalLinks" >
       <bool>true</bool>
      </property>
     </widget>
