@@ -91,6 +91,9 @@ p, li { white-space: pre-wrap; }
         <property name="textFormat" >
          <enum>Qt::RichText</enum>
         </property>
+        <property name="openExternalLinks" >
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
      </layout>
